CHROMIUM: watchdog: qcom: Report reboot reason

The Qualcom watchdog timer block reports if the system was reset by the
watchdog. Pass the information to user space.

BUG=chromium:593028
TEST=build for whirlwind (chromeos-3.14 branch) and pass:
   test_that $H platform_HWwatchdog

   and manually verify daisydog emits "watchdog-timeout" when it starts.

Change-Id: Ic4aeeae9da3354eef279151746f1b67ccba834fa
Signed-off-by: Guenter Roeck <groeck@chromium.org>
Signed-off-by: Grant Grundler <grundler@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/334460
Reviewed-by: Guenter Roeck <groeck@google.com>